apps/staging/tautulli/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli
  namespace: default
spec:
  parentRefs:
    - name: myrobertson-com-gateway
      namespace: default
  hostnames:
    - tautulli.staging.myrobertson.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tautulli
          port: 8181
